--- a/SyncFusionMauiBlankApp.MauiControls/EmbeddedControl.xaml
+++ b/SyncFusionMauiBlankApp.MauiControls/EmbeddedControl.xaml
@@ -4,10 +4,21 @@
 			 xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
 			 x:Class="SyncFusionMauiBlankApp.MauiControls.EmbeddedControl"
 			 xmlns:chart="http://schemas.syncfusion.com/maui"
+			 xmlns:sfgrid="http://schemas.syncfusion.com/maui"
 			 xmlns:local="using:SyncFusionMauiBlankApp.MauiControls"
 			 HorizontalOptions="Fill"
 			 VerticalOptions="Fill">
 	<ContentView.Resources>
+		<OnPlatform x:Key="minimumWidth"
+					x:TypeArguments="x:Double">
+			<On Platform="Android,iOS"
+				Value="120"></On>
+		</OnPlatform>
+		<OnPlatform x:Key="margin"
+					x:TypeArguments="Thickness">
+			<On Platform="WinUI,MacCatalyst"
+				Value="-5.6,-5,-5,-7" />
+		</OnPlatform>
 		<local:LineDrawable x:Key="lineDrawable" />
 		<local:EllipseDrawable x:Key="ellipseDrawable" />
 		<local:FilledEllipseDrawable x:Key="filledEllipseDrawable" />
@@ -47,7 +58,7 @@
 		<Label Text="Embedded MAUI Content"
 			   VerticalOptions="Center"
 			   HorizontalOptions="Center" />-->
-		<GraphicsView Drawable="{StaticResource lineDrawable}"
+		<!--<GraphicsView Drawable="{StaticResource lineDrawable}"
 					  HeightRequest="120"
 					  WidthRequest="400" />
 		<Label Text="Ellipse" />
@@ -66,8 +77,8 @@
 		<GraphicsView Drawable="{StaticResource rectangleDrawable}"
 					  HeightRequest="120"
 					  WidthRequest="400" />
-		<Label Text="Square" />
-		<chart:SfCircularChart x:Name="Chart"
+		<Label Text="Square" />-->
+		<!--<chart:SfCircularChart x:Name="Chart"
 							   HorizontalOptions="Fill"
 							   VerticalOptions="Fill"
 							   HeightRequest="400" WidthRequest="400">
@@ -106,6 +117,125 @@
 					</chart:PieSeries.DataLabelSettings>
 				</chart:PieSeries>
 			</chart:SfCircularChart.Series>
-		</chart:SfCircularChart>
+		</chart:SfCircularChart>-->
+		<!--<sfgrid:SfDataGrid x:Name="dataGrid"
+						   Margin="{StaticResource margin}"
+						   AutoGenerateColumnsMode="None"
+						   RowHeight="48"
+						   HorizontalScrollBarVisibility="Always"
+						   VerticalScrollBarVisibility="Always"
+						   ItemsSource="{Binding Data}"
+						   ColumnWidthMode="Fill">
+			<sfgrid:SfDataGrid.BindingContext>
+				<local:TeamViewModel />
+			</sfgrid:SfDataGrid.BindingContext>
+			<sfgrid:SfDataGrid.DefaultStyle>
+				<sfgrid:DataGridStyle HeaderRowFontFamily="Roboto-Medium"
+									  HeaderRowFontSize="14"
+									  RowFontSize="14"
+									  HeaderRowTextColor="#212121"
+									  RowTextColor="#212121"></sfgrid:DataGridStyle>
+			</sfgrid:SfDataGrid.DefaultStyle>
+			<sfgrid:SfDataGrid.Columns>
+				<sfgrid:DataGridTemplateColumn HeaderTextAlignment="Start"
+											   ColumnWidthMode="Auto"
+											   MappingName="TeamName"
+											   MinimumWidth="150"
+											   HeaderText="Team">
+					<sfgrid:DataGridTemplateColumn.CellTemplate>
+						<DataTemplate>
+							<HorizontalStackLayout Spacing="8"
+												   Padding="8">
+								--><!--<Image Source="{Binding Logo,Converter={StaticResource imageConverter}}"
+									   WidthRequest="32"
+									   HeightRequest="32" />--><!--
+								<Label Text="{Binding TeamName}"
+									   TextColor="#212121"
+									   BackgroundColor="White"
+									   VerticalTextAlignment="Center"
+									   HorizontalTextAlignment="Center" />
+							</HorizontalStackLayout>
+						</DataTemplate>
+					</sfgrid:DataGridTemplateColumn.CellTemplate>
+				</sfgrid:DataGridTemplateColumn>
+
+				<sfgrid:DataGridTextColumn MappingName="Wins"
+										   HeaderTextAlignment="Center"
+										   CellTextAlignment="Center"
+										   HeaderText="W">
+				</sfgrid:DataGridTextColumn>
+				<sfgrid:DataGridTextColumn MappingName="Losses"
+										   HeaderTextAlignment="Center"
+										   CellTextAlignment="Center"
+										   HeaderText="L">
+
+				</sfgrid:DataGridTextColumn>
+
+				<sfgrid:DataGridTextColumn MappingName="PCT"
+										   HeaderTextAlignment="Center"
+										   CellTextAlignment="Center"
+										   HeaderText="WPCT">
+
+				</sfgrid:DataGridTextColumn>
+
+				<sfgrid:DataGridTextColumn MappingName="GB"
+										   HeaderTextAlignment="Center"
+										   CellTextAlignment="Center"
+										   HeaderText="GB">
+				</sfgrid:DataGridTextColumn>
+
+			</sfgrid:SfDataGrid.Columns>
+		</sfgrid:SfDataGrid>-->
+
+		<sfgrid:SfDataGrid IndentColumnWidth="40"
+						   Margin="{StaticResource margin}"
+						   x:Name="dataGrid"
+						   GroupCaptionTextFormat="{}{ColumnName} : {Key} - {ItemsCount} Item(s)"
+						   HeaderRowHeight="52"
+						   RowHeight="48"
+						   ItemsSource="{Binding OrdersInfo}"
+						   HorizontalScrollBarVisibility="Always"
+						   VerticalScrollBarVisibility="Always"
+						   SortingMode="Single"
+						   GroupingMode="Multiple"
+						   AllowGroupExpandCollapse="True"
+						   AutoGenerateColumnsMode="None"
+						   ColumnWidthMode="Fill">
+			<sfgrid:SfDataGrid.BindingContext>
+				<local:OrderInfoViewModel />
+			</sfgrid:SfDataGrid.BindingContext>
+			<sfgrid:SfDataGrid.DefaultStyle>
+				<sfgrid:DataGridStyle HeaderRowFontFamily="Roboto-Medium"
+									  CaptionSummaryRowFontFamily="Roboto-Medium" />
+			</sfgrid:SfDataGrid.DefaultStyle>
+
+			<sfgrid:SfDataGrid.Columns>
+				<sfgrid:DataGridNumericColumn Format="d"
+											  MinimumWidth="{StaticResource minimumWidth}"
+											  HeaderText="Order ID"
+											  MappingName="OrderID"></sfgrid:DataGridNumericColumn>
+				<sfgrid:DataGridNumericColumn MinimumWidth="{StaticResource minimumWidth}"
+											  HeaderText="Customer ID"
+											  MappingName="EmployeeID"
+											  Format="d"></sfgrid:DataGridNumericColumn>
+				<sfgrid:DataGridTextColumn MinimumWidth="{StaticResource minimumWidth}"
+										   HeaderText="Name"
+										   MappingName="FirstName"></sfgrid:DataGridTextColumn>
+				<sfgrid:DataGridTextColumn MinimumWidth="{StaticResource minimumWidth}"
+										   HeaderText="Ship City"
+										   MappingName="ShipCity"></sfgrid:DataGridTextColumn>
+				<sfgrid:DataGridTextColumn MinimumWidth="{StaticResource minimumWidth}"
+										   HeaderText="Country"
+										   MappingName="ShipCountry"></sfgrid:DataGridTextColumn>
+				<sfgrid:DataGridDateColumn MinimumWidth="{StaticResource minimumWidth}"
+										   HeaderText="Shipped Date"
+										   MappingName="ShippingDate"></sfgrid:DataGridDateColumn>
+			</sfgrid:SfDataGrid.Columns>
+
+			<sfgrid:SfDataGrid.GroupColumnDescriptions>
+				<sfgrid:GroupColumnDescription ColumnName="ShipCountry" />
+				<sfgrid:GroupColumnDescription ColumnName="ShipCity" />
+			</sfgrid:SfDataGrid.GroupColumnDescriptions>
+		</sfgrid:SfDataGrid>
 	</VerticalStackLayout>
 </ContentView>
